<resources>
    <string name="app_name"></string>
    <string name="add">Add</string>
    <string name="title">Title</string>
    <string name="text1">Text</string>
    <string name="save">Save</string>
    <string name="text">Enter idea</string>
    <string name="add_tasks">Add tasks</string>
    <string name="set_priority">Set priority:</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="add_date">Add date</string>
    <string name="add_time">Add time</string>
</resources>
