<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5sp"
                tools:ignore="UselessParent">
            <LinearLayout
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
                     >
    <EditText
        android:id="@+id/editForDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_date"
        android:textIsSelectable="true"
        android:inputType="date"/>

    <EditText
        android:id="@+id/editForTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="datetime"
        android:textIsSelectable="true"
        android:hint="@string/add_time"/>
            </LinearLayout>
    <Button
        android:id="@+id/saveBtn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/outline_background"
        android:clickable="true"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/save"
        android:textColor="@android:color/black"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="28dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="28dp"/>
    </RelativeLayout>